[package]
name = "nacos-sdk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["fs"] }
log = "0"