[package]
name = "nacos-sdk-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sezi-yuan/nacos-sdk-rust"
description = "nacos client rust implement"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }
log = "0"